# rust_example_ws

./: Cargo.toml
lib123/: Cargo.toml
lib123/src/: lib.rs
uprog/: Cargo.toml
uprog/src/: main.rs
